# tembot

./: .gitignore  CMakeLists.txt
cmake/: cu.cmake
include/: mode.h
src/: main.cpp
